--- a/something.html
+++ b/something.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<!-- FILEPATH: /c:/TVTwork/Syksy23/webbi/ProjectSite/something.html -->
-<head>
-    <title>Test</title>
-</head>
-
-<body>
-<!-- Button to toggle dropdown menu -->
-
-<button class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
-    Click me
-</button>
-
-<!-- Dropdown menu -->
-<ul class="dropdown-menu" aria-hidden="true">
-    <li><a href="#">Option 1</a></li>
-    <li><a href="#">Option 2</a></li>
-    <li><a href="#">Option 3</a></li>
-</ul>
-</body>
+    <head>
+        <title>My Website</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+        <link rel="stylesheet" href="/styles/somestyle.css">
+    </head>
+    <body style="background-color:#de2478;">
+        <h1>Testing, testing...</h1>
+        <header>
+            <nav>
+                <button id="nav-toggle">Menu</button>
+                <ul class="nav-menu">
+                        <button><a href="#">Home</a></button>
+                        <button><a href="#">About</a></button>
+                        <button><a href="#">Contact</a></button>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
+
