Some minor stuff

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <h1 style="background: linear-gradient(to right, #170448, #2926cf, #2eccf4);
         background-clip: text; -webkit-background-clip: text;">Kyllä tämä tästä vielä luonnistuu!</h1>
-        <h1 style="background: linear-gradient(to right, #8067c0, #130f6d, #0a7878);
+        <h1 style="background: linear-gradient(to right, #be79f6, #130f6d, #0a7878);
         background-clip: text; -webkit-background-clip: text; z-index: -1; position: absolute;
-        top: 4px; right: 7px;">Kyllä tämä tästä vielä luonnistuu!</h1>
+        top: 3px; left: 4px;">Kyllä tämä tästä vielä luonnistuu!</h1>
         <header>
             <nav>
                 <button id="nav-toggle">Menu</button>
