--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
         <script src="scripts/script.js"></script>
     </head>
     <body>
-        <h1 style="background: linear-gradient(to right, #170448, #2926cf, #2eccf4);
-        background-clip: text; -webkit-background-clip: text;">Kyllä tämä tästä vielä luonnistuu!</h1>
-        <h1 style="background: linear-gradient(to right, #be79f6, #130f6d, #0a7878);
-        background-clip: text; -webkit-background-clip: text; z-index: -1; position: absolute;
-        top: 3px; left: 4px;">Kyllä tämä tästä vielä luonnistuu!</h1>
+        <h1 id="otsake">Kyllä tämä tästä vielä luonnistuu!</h1>
+        <h1 id = "shadow">Kyllä tämä tästä vielä luonnistuu!</h1>
         <header>
             <nav>
                 <button id="nav-toggle">Menu</button>
@@ -26,12 +23,8 @@
             </nav>
         </header>
         <aside>
-            <a href="https://github.com/Jylant" target="_blank" id="linkki">
-                <img src="./images/Moon.jpg" alt="Kuukuva" style="width: 21vw; height: auto;" id="linkkikuva">
-            </a>
-            <figcaption id="selite">
-                <p>Not the picture, mind you.</p>
-            </figcaption>
+            <iframe id="ruutu" src="./images/scaled.html" frameborder="0" title="The fun stuff" style="width: 200px; height: auto;">
+            </iframe>
         </aside>
         <p id="declaration">I made this</p>
         <p>So, this is some nice filler text for my thing <br>which should be this website I'm supposed to make <br>but have no idea on the subject</p>
