Finally did something

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
         <script src="scripts/script.js"></script>
     </head>
     <body>
-        <h1 id="otsake">Kyllä tämä tästä vielä luonnistuu!</h1>
-        <h1 id = "shadow">Kyllä tämä tästä vielä luonnistuu!</h1>
+        <h1 id="otsake">Antin supertyylikäs portfolio/kotisivu</h1>
+        <h1 id="shadow">Antin supertyylikäs portfolio/kotisivu</h1>
         <header>
             <nav>
                 <button id="nav-toggle">Menu</button>
                 <ul class="nav-menu">
-                        <button class="nav-item">Home</button>
-                        <button class="nav-item">About</button>
-                        <button class="nav-item">Contact</button>
-                        <button class="nav-item">Github</button>
+                        <button class="nav-item"><a href="#">Home</a></button>
+                        <button class="nav-item"><a href="/about.html">About</a></button>
+                        <button class="nav-item"><a href="/portfolio.html">Portfolio</a></button>
+                        <button class="nav-item"><a href="https://github.com/Jylant">Github</a></button>
                 </ul>
             </nav>
         </header>
