Good enough for me

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <title>About Us</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="/styles/stylesheet.css">
+    <link rel="stylesheet" href="/styles/aboutstyle.css">
+    <script src="scripts/script.js"></script>
 </head>
 <body>
     <header>
@@ -15,8 +16,9 @@
             <button id="nav-toggle">Menu</button>
             <ul class="nav-menu">
                 <li><button class="nav-item"><a href="/">Home</a></button></li>
-                <li><button class="nav-item"><a href="/services.html">Services</a></button></li>
-                <li><button class="nav-item"><a href="/contact.html">Contact Us</a></button></li>
+                <li><button class="nav-item"><a href="/portfolio.htm">Portfolio</a></button></li>
+                <li><button class="nav-item"><a href="/about.html">About</a></button></li>
+                <li><button class="nav-item"><a href="https://www.github.com/Jylant" target="_blank">Github</a></button></li>
             </ul>
         </nav>
     </header>
