--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
                 <ul class="nav-menu">
                         <button class="nav-item"><a href="#">Home</a></button>
                         <button class="nav-item"><a href="/about.html">About</a></button>
-                        <button class="nav-item"><a href="/portfolio.html">Portfolio</a></button>
-                        <button class="nav-item"><a href="https://github.com/Jylant">Github</a></button>
+                        <button class="nav-item"><a href="/portfolio.htm">Portfolio</a></button>
+                        <button class="nav-item"><a href="https://github.com/Jylant" target="_blank">Github</a></button>
                 </ul>
             </nav>
         </header>
         <aside>
-            <iframe id="ruutu" src="./images/scaled.html" frameborder="0" title="The fun stuff" style="width: 200px; height: auto;">
+            <iframe id="ruutu" src="./images/favicon.png" frameborder="1px" title="The fun stuff">
             </iframe>
         </aside>
-        <p id="declaration">I made this</p>
-        <p>So, this is some nice filler text for my thing <br>which should be this website I'm supposed to make <br>but have no idea on the subject</p>
+        <h2 id="declaration" style="font-family: Chiller; text-align: center;">I made this (page)</h2>
+        <p>Hello, and welcome to my (needlessly fancy) homepage! <br>
+        Or rather, a showcase of my paltry and brief foray into front-end development. <br>
+        Other projects will get included in the protfolio section of this site. <br>Enjoy!</p>
         <footer>
-            <button id="nappi">This should be at the bottom</button>
+            <button id="nappi" style="position: fixed; top: 96%; left: 50%">This should be at the bottom</button>
         </footer>
         
     </body>
