--- a/portfolio.htm
+++ b/portfolio.htm
@@ -56,7 +56,7 @@
                     <button class="nav-button" onclick="window.location.href='index.html'">Home</button>
                     <button class="nav-button" onclick="window.location.href='about.html'">About</button>
                     <button class="nav-button" onclick="window.location.href='portfolio.htm'">Portfolio</button>
-                    <button class="nav-button" onclick="window.location.href='https://github.com/Jylant'" target="_blank">GitHub</button>
+                    <button class="nav-button" onclick="window.open('https://www.github.com/Jylant', '_blank')" target="_blank">GitHub</button>
                 </div>
                 <script src="scripts/funmove.js"></script>
             </body>
