--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <aside>
-            <iframe id="ruutu" src="./images/favicon.png" frameborder="1px" title="The fun stuff">
+            <iframe id="ruutu" src="./images/Moon.jpg" frameborder="1px" title="The fun stuff">
             </iframe>
         </aside>
         <h2 id="declaration" style="font-family: Chiller; text-align: center;">I made this (page)</h2>
@@ -31,7 +31,7 @@
         Or rather, a showcase of my paltry and brief foray into front-end development. <br>
         Other projects will get included in the protfolio section of this site. <br>Enjoy!</p>
         <footer>
-            <button id="nappi" style="position: fixed; top: 96%; left: 50%">This should be at the bottom</button>
+            <button id="nappi" style="position: fixed; top: 96%; left: 45%">This should be at the bottom</button>
         </footer>
         
     </body>
